--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="hPuJndOe_400x400-modified.png" width="200" height="200" alt="Richard profile picture"></td>
       <td><h1>Richard Ashworth</h1>
-      <p><em>Aspiring software engineer</p>
+      <p><em>Aspiring software engineer - check</p></em></p>
       <a href="contact.html">Contact Details</a> - <a href="https://www.linkedin.com/in/richard-ashworth-/">Linkedin Profile</a>
       <p>I am Mathematics Teacher pursing a career as a software engineer. I love learning news things, solving problems and playing sport.</p></td>
     </tr>
