Styling with CSS

--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="css\styles.css">
   </head>
   <body>
-    <h3>Websites</h3>
-    <p><a href="https://www.linkedin.com/in/richard-ashworth-/">Linkedin</a></p>
-<hr>
     <form action="mailto:r.ashworth@hotmail.com" method="post", enctype="text/plain">
       <label for="name">Your Name</label>
       <input type="text" name="Name" value=""><br>
