--- a/hobbies.html
+++ b/hobbies.html
@@ -3,12 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Hobbies</title>
+  <link rel="stylesheet" href="css\styles.css">
+  <style>
+    h4 {
+      margin-bottom: 0px;
+    }
+    p {
+      margin-top: 0px;
+    }
+  </style>
 </head>
 
 <body>
   <h3>Other responsibilities and interests</h3>
-  <p><strong>Hockey</strong> <br>
+  <h4>Hockey</h4>
+  <p>
     Teams: Ashmoor 1st XI (current), University of Bath 1st XI (Half Blue) <br>
     Current Leagues: National West Conference, National Indoor Division 1<br>
     Titles: West of England Premiership 2018/19, West of England Championship
@@ -16,23 +26,23 @@
     Responsibilities: Vice Captain 2019-20 </p>
   
    <p>
-    <strong>Cricket</strong> <br>
+    <h4>Cricket</h4>
     Teams: Paignton 1st XI, University of Bath 1st X1, Devon Lions, Devon League XI, Devon u16s
     Titles: Devon A Division 2018, West of England 2006
     Responsibilities: Captain 2016-2018, Level 2 Qualified Coach.
   </p>
 
   <p>
-    <strong>Committee Member</strong> <br>
+    <h4>Committee Member</h4>
     Introduced sponsorship schemes which have secured over £10,000 for Hockey and Cricket clubs. 
     Twice organised overseas tours for over 50 students.</p>
 
   <p>
-    <strong>Charity</strong><br>
+    <h4>Charity</h4>
     Twice ran the Bath Half raising money for local charities. Charity bike ride in planning stage for 2023. 
   </p>
   <p>
-    <strong>Other</strong><br>
+    <h4>Other</h4>
     Avid cyclist and enjoy running and walking. Also have an interest in the financial markets. 
   </p>
   <p><a href="index.html">Home</a></p>
