--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Richard's Personal Site</title>
+  <link rel="stylesheet" href="css\styles.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="hPuJndOe_400x400-modified.png" width="200" height="200" alt="Richard profile picture"></td>
+      <td><img src="hPuJndOe_400x400-modified.png" alt="Richard profile picture"></td>
       <td><h1>Richard Ashworth</h1>
       <p><em>Aspiring software engineer</p></em></p>
-      <a href="contact.html">Contact Details</a> - <a href="https://www.linkedin.com/in/richard-ashworth-/">Linkedin Profile</a>
+      <a href="contact.html">Contact</a> - <a href="https://www.linkedin.com/in/richard-ashworth-/">Linkedin Profile</a>
       <p>I am Mathematics Teacher pursing a career as a software engineer. I love learning news things, solving problems and playing sport.</p></td>
     </tr>
   </table>
@@ -23,7 +25,6 @@
     <li>100 Days of Code: The Complete Python Pro Bootcamp for 2022 - includes HTML and CSS - (in progress)</li>
     <li>Learn Ruby</li>
     <li>Introduction to GitHub</li>
-    <li>The Odin Project - Ruby</li>
   </ul>
   <h4>Projects</h4>
   <p>I am currently completing courses in Python, HTML and CSS. Within these 
@@ -52,7 +53,7 @@
       <td>2011-2015</td>
       <td>University of Bath</td>
       <td>BSc (Hons) Matheamtical Sciences</td>
-      <td>Algebra, Analysis, Probability, Statistics, Numerical Analysis, Graphs & Networks</td>
+      <td>Algebra, Analysis, Probability, Statistics, Numerical Analysis, Graphs & Networks, Differential Equations</td>
     </tr>
     <tr>
       <td>2009-2011</td>
@@ -67,6 +68,7 @@
       <td>4 A*s, 4 As, 2 Bs, 1 C - (Mathematics A*, English A, B)</td>
     </tr>
   </table>
+  <hr>
   <h3>Work Experience</h3>
   <table cellspacing="10">
     <thead>
@@ -120,7 +122,7 @@
     </tr>
   </table>
 <hr>
-  <h3><a href="hobbies.html">Other responsibilities and interests</a></h3>
+  <h3><a href="hobbies.html">Hobbies and other responsibilities</a></h3>
 </body>
 
 </html>
